Fix conflicts. Edit view layout, fix footer aligning and clear code. Fix remarks.

--- a/app/javascript/stylesheets/_colors.scss
+++ b/app/javascript/stylesheets/_colors.scss
@@ -6,3 +6,5 @@ $solitude: #f8f9fa6e;
 $opasity-gray: rgba(255, 255, 255, 0.4);
 $opasity-black: rgba(18, 19, 19, 0.616);
 $white: #fff;
+$half-opasity-background: rgba(255, 255, 255, 0.5);
+$whitesmoke: whitesmoke;
