--- a/app/javascript/stylesheets/osbbs.scss
+++ b/app/javascript/stylesheets/osbbs.scss
@@ -53,10 +53,6 @@ div a.btn-outline-primary {
     margin-left: 30px;
   }
 
-.nav-item a {
-  margin-left: 4px;
-}
-
 .container-fluid {
   h1 {
     text-align: center;
